corrected page title spacing

--- a/assets/sass/partials/_person.scss
+++ b/assets/sass/partials/_person.scss
@@ -44,7 +44,11 @@
   }
 
   .page-heading {
-    margin-top:$margin*2.5;
+    margin-top:$margin;
+
+    @include breakpoint($bp-small-desktop) {
+      margin-top:$margin*2.5;
+    }
   }
 
   .person-surname-heading { 
